--- a/wp-content/uploads/elementor/css/post-6.css
+++ b/wp-content/uploads/elementor/css/post-6.css
@@ -1,6 +1,7 @@
 .elementor-kit-6 {
     --e-global-color-primary: #FAEADA;
-    --e-global-color-secondary: #EFA559;
+    --e-global-color-secondary: #ffff;
+    /* --e-global-color-secondary: #EFA559; */
     --e-global-color-text: #;
     --e-global-color-accent: #010001;
     --e-global-color-6fb2457: #21160B;
